@@ -1,3 +1,11 @@
+0.X.0
+
+   XXX
+
+   Added 'connection_type' parameter to Http.request().
+
+
+
 0.3.0
    Calling Http.request() with a relative URI, as opposed to an absolute URI,
    will now throw a specific exception.
